tests/specs/check/ts_suppression_unresolved_import/unsuppressed.out
TS2307 [ERROR]: Cannot find module 'missing-package' or its corresponding type declarations.
import value from "missing-package";
                  ~~~~~~~~~~~~~~~~~
    at file:///[WILDLINE]/unsuppressed.ts:1:19

error: Type checking failed.
